@startuml

title __PROFILE's Class Diagram__\n

  namespace com.example.procomsearch {
    namespace ui.Profile {
      class com.example.procomsearch.ui.Profile.ProfileFragment {
          ~ clearHistory : Button
          ~ historyView : TextView
          ~ profilePhoto : ImageView
          ~ recyclerView : RecyclerView
          ~ userIdView : TextView
          ~ userNameView : TextView
          {static} - db : SQLiteDatabase
          {static} - emptyText : TextView
          {static} - historyCompany : CompanyFactory
          {static} - userId : int
          + onCreateView()
          - getUserName()
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace ui.Profile {
      class com.example.procomsearch.ui.Profile.ProfileViewModel {
          - mText : MutableLiveData<String>
          + ProfileViewModel()
          + getText()
      }
    }
  }
  

  com.example.procomsearch.ui.Profile.ProfileFragment -up-|> androidx.fragment.app.Fragment
  com.example.procomsearch.ui.Profile.ProfileFragment o-- com.example.procomsearch.CompanyAdapter : adapter
  com.example.procomsearch.ui.Profile.ProfileFragment o-- com.example.procomsearch.ui.Profile.ProfileViewModel : profileViewModel
  com.example.procomsearch.ui.Profile.ProfileViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
